fixed z-index formula editor + admin panel logo

--- a/src/components/AdminSpace/content/Analytics/main/AnalyticsView/AnalWidget/AnalWidget.scss
+++ b/src/components/AdminSpace/content/Analytics/main/AnalyticsView/AnalWidget/AnalWidget.scss
@@ -9,7 +9,7 @@
     width: fit-content;
     height: fit-content;
     padding: 5px 10px;
-    
+    z-index: 50 !important;
 
     border-radius: 5px;
     font-size: 20px;
