--- a/src/components/AdminSpace/content/Analytics/main/AnalyticsView/AnalyticsView.scss
+++ b/src/components/AdminSpace/content/Analytics/main/AnalyticsView/AnalyticsView.scss
@@ -7,7 +7,8 @@
     overflow: auto;
     width: calc(100% - 20px);
     height: 100%;
-    transition: height 2s;
+    transition: height .5s;
+    z-index: 50;
     
     display: flex;
     flex-direction: row;
